<resources>
    <string name="app_name">Physio2Go</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="already_registered">already registered?</string>
    <string name="confirm_password">confirm password</string>
</resources>
